# subit-t

./: .gitignore  CHANGELOG.md  README.md  index.html  pyproject.toml
.github/workflows/: deploy-webapp.yml
assets/: index-D8ZY0Bn7.css  index-DFZJ-R-0.js
docs/: LEIBNIZ_RELEASE.md  canon.md  operators.md  spec.md
eval/: README.md  challenge.jsonl  generator.py  gold.jsonl  runner.py  v7_sample.jsonl
examples/: code_review.py  kernel_demo.py
integrations/: __init__.py  autogen.py  langchain.py
scripts/: cleanup.py
subit-t/: core.py  guards.py  router.py
subit_t/: __init__.py  canon.py  cli.py  core.py  encoder.py  guards.py  injector.py  kernel.py  router.py
subit_t.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
subit_t/prompts/: __init__.py  profiles.py
subit_t/runtime/: __init__.py  chat.py  ollama.py  web.py
tests/: test_core.py  test_encoder.py  test_guards.py  test_integrations.py  test_prompts.py  test_router.py  test_runtime.py
webapp/: index.html  package-lock.json  package.json  vite.config.js
webapp/public/: manifest.webmanifest
webapp/src/: App.jsx  styles.css
webapp/src/components/: CliffordView.jsx  LatticeView.jsx  ObservatoryView.jsx  TopologicalView.jsx  UnifiedObservatory.jsx  VolumetricView.jsx
webapp/src/lib/: subit.js
