[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subit-t"
version = "0.3.0"
description = "Archetypal routing layer for multi-agent AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "routing", "llm", "multi-agent", "archetype"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
subit = "subit_t.cli:main"

[project.optional-dependencies]
langchain = ["langchain>=0.1"]
autogen   = ["pyautogen>=0.2"]
dev       = ["pytest>=7.0", "pytest-cov>=4.0", "ruff"]

[project.urls]
Homepage   = "https://github.com/sciganec/subit-t"
Repository = "https://github.com/sciganec/subit-t"
Issues     = "https://github.com/sciganec/subit-t/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
packages = ["subit_t"]
